// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox [common] example testing should match snapshot(s) for interactive 1`] = `
<div
  className="lucid-Checkbox lucid-Checkbox-is-selected"
  onClick={[Function]}
  title="Little Plain Checkbox"
>
  <input
    checked={true}
    className="lucid-Checkbox-native"
    disabled={false}
    onChange={[Function]}
    tabIndex={20}
    title="Little Plain Checkbox"
    type="checkbox"
  />
  <span
    className="lucid-Checkbox-visualization-glow"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-container"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-checkmark"
    onClick={[Function]}
  >
    <span
      className="lucid-Checkbox-visualization-checkmark-stem"
    />
    <span
      className="lucid-Checkbox-visualization-checkmark-kick"
    />
  </span>
</div>
`;

exports[`Checkbox [common] example testing should match snapshot(s) for interactive 2`] = `
<div
  className="lucid-Checkbox lucid-Checkbox-is-disabled"
  onClick={[Function]}
>
  <input
    checked={false}
    className="lucid-Checkbox-native"
    disabled={true}
    onChange={[Function]}
    tabIndex={20}
    type="checkbox"
  />
  <span
    className="lucid-Checkbox-visualization-glow"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-container"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-checkmark"
    onClick={[Function]}
  >
    <span
      className="lucid-Checkbox-visualization-checkmark-stem"
    />
    <span
      className="lucid-Checkbox-visualization-checkmark-kick"
    />
  </span>
</div>
`;

exports[`Checkbox [common] example testing should match snapshot(s) for interactive 3`] = `
<div
  className="lucid-Checkbox lucid-Checkbox-is-disabled lucid-Checkbox-is-selected"
  onClick={[Function]}
>
  <input
    checked={true}
    className="lucid-Checkbox-native"
    disabled={true}
    onChange={[Function]}
    tabIndex={20}
    type="checkbox"
  />
  <span
    className="lucid-Checkbox-visualization-glow"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-container"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-checkmark"
    onClick={[Function]}
  >
    <span
      className="lucid-Checkbox-visualization-checkmark-stem"
    />
    <span
      className="lucid-Checkbox-visualization-checkmark-kick"
    />
  </span>
</div>
`;

exports[`Checkbox [common] example testing should match snapshot(s) for interactive 4`] = `
<div
  className="lucid-Checkbox lucid-Checkbox-is-disabled lucid-Checkbox-is-selected"
  onClick={[Function]}
>
  <input
    checked={false}
    className="lucid-Checkbox-native"
    disabled={true}
    onChange={[Function]}
    tabIndex={20}
    type="checkbox"
  />
  <span
    className="lucid-Checkbox-visualization-glow"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-container"
    onClick={[Function]}
  />
  <span
    className="lucid-Checkbox-visualization-indeterminate"
    onClick={[Function]}
  >
    <span
      className="lucid-Checkbox-visualization-indeterminate-line"
    />
  </span>
</div>
`;
